# WriteByAI--token-optimization-rs

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
src/: McpInputProcessor.ts  index.js  index.ts  start.ts  types.js  types.ts
token-optimization-rs/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
token-optimization-rs/src/: lib.rs
