[package]
name = "token-optimization-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
once_cell = "1.8"
parking_lot = "0.12"
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jieba-rs = "0.6"
lru = "0.7"
bloomfilter = "1.0"
diff = "0.1"
num_cpus = "1.13"

[build-dependencies]
napi-build = "2"
